2015-08-25  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r23143.

	* base/openvas_file.c, base/openvas_file.h (openvas_file_md5sum): Remove
	function.

	* nasl/nasl_grammar.y (file_md5sum): New function. Moved from
	base/openvavs_file.c.
	(init_nasl_ctx): Adjust to use new function.

2015-08-20  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r23100.

	* base/openvas_file.c (openvas_file_md5sum): New function.

	* base/openvas_file.h: Add function prototype.

	* nasl/nasl_grammar.y (init_nasl_ctx): Cache the md5sum of the verified
	file to check that it wasn't changed on later checks.

2015-08-20  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r22452.

	* nasl/nasl_init.c (libfuncs): Add snmpv2c_get().

	* nasl/nasl_snmp.c (snmpv1_get): Add version parameter. Rename to
	snmpv1v2c_get().
	(nasl_snmpv2c_get, nasl_snmpv1v2c_get): New functions.
	(nasl_snmpv1_get): Adjust to call new function.

	* nasl/nasl_snmp.h: Add function prototype.

2015-08-19  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r23046 and r23051.

	* nasl/nasl_ssh.c (nasl_ssh_connect): Set SSH_OPTIONS_HOSTKEYS value
	when keytype argument is provided.

2015-08-19  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r22926, r22958 and r23042.

	* nasl/nasl_ssh.c (nasl_ssh_get_host_key): New function.

	* nasl/nasl_ssh.h: Add function prototype.

	* nasl/nasl_init.c (libfuncs): Add nasl_ssh_get_host_keys().

2015-08-18  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r23079.

	* nasl/nasl_global_ctxt.h (naslctxt): Add kb element.

	* nasl/exec.c (exec_nasl_script): Set context kb.

	* nasl/nasl_grammar.y (INCLUDE): Set context kb.
	(init_nasl_ctx): Cache the signature checking result in kb, to prevent
	checking the same nasl script or include file multiple times.

2015-08-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Backport r23049.

	* base/drop_privileges.c (drop_privileges): Check effective user ID